--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<link href='http://fonts.googleapis.com/css?family=Exo|Fruktur|Audiowide' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css" type="text/css" charset="utf-8">
 	<style>
 		.hidden { display:none; }
 		#spinner {position:absolute;left:50%;top:50%;margin-left:-25px;margin-top:-25px;height:50px;width:50px;background:url('img/spinner.gif') no-repeat;}
 	</style>
-	<title>The Planetarium</title>
+	<title>Gezegenlerimiz</title>
 </head>
 <body class="system">
 	<div id="starfield">
@@ -33,16 +34,16 @@
 	<img id="glow" src="img/glow.png">
 
 	<div id="title">
-		<h1 class="franchise"><span class="marketing">The</span>Planetarium</h1>
-		<span id="subtitle" class="carto">An HTML5 Astronomical Adventure</span>
+		<h1 class="franchise"><span class="marketing">işte</span>Gezegenlerimiz</h1>
+		<span id="subtitle" class="carto">HTML5 ile Astronomik Macera</span>
 	</div>
 	
 	<div id="instructions" class="carto loading">
-		click on a planet to start
+		başlamak için bir gezegene tıklayın
 	</div>
 
 	<div id="toggle-credits" class="loading">
-		<span class="marketing">view credits</span>
+		<span class="marketing">künye</span>
 	</div>
 
 	<section id="credits">
@@ -57,20 +58,25 @@
 		</div>
 		<div id="authors">
 			<p id="guillaume">
-				<span class="marketing">design by</span>
+				<span class="marketing">tasarım</span>
 				<span class="bebas">Guillaume Lecollinet</span>
 				<span class="carto"><a target="_blank" href="http://twitter.com/glecollinet/" title="follow Guillaume on Twitter">@glecollinet</a></span>								
 			</p>
 			<p id="franck">
-				<span class="marketing">code by</span>
+				<span class="marketing">kod</span>
 				<span class="bebas">Franck Lecollinet</span>
 				<span class="carto"><a target="_blank" href="http://twitter.com/whatthefranck/" title="follow Franck on Twitter">@whatthefranck</a></span>
+			</p>
+			<p id="hmert">
+				<span class="marketing">tercüme</span>
+				<span class="bebas">HUSEYIN MERT</span>
+				<span class="carto"><a target="_blank" href="http://twitter.com/hmert/" title="Hüseyin'i Twitter'da takip et">@hmert</a></span>
 			</p>
 		</div>
 		<section id="typefaces">
 			<header>
 				<span class="separator"></span>
-				<span id="title-hr" class="marketing">typefaces</span>
+				<span id="title-hr" class="marketing">fontlar</span>
 				<span class="separator"></span>
 			</header>
 			<ul>
@@ -100,23 +106,23 @@
 		</div>
 
 		<div id="counter">
-			<span class="carto">DISTANCE FROM THE SUN</span><br />
+			<span class="bebas">Güneşten uzaklığı</span><br />
 			<span id="kilometers" class="bebas"></span>
 		</div>
       
 		<div id="back">
-			<span class="carto">Back to space</span>
+			<span class="carto">uzaya geri dön</span>
 		</div>
 
 		<div id="moveleft">
 			<div id="previous">				
-				<img src="img/previous.svg" alt="Previous planet">
+				<img src="img/previous.svg" alt="Önceki Gezegen">
 			</div>
 		</div>
 		
 		<div id="moveright">
 			<div id="next">		
-				<img src="img/previous.svg" alt="Next planet">
+				<img src="img/previous.svg" alt="Sonraki Gezegen">
 			</div>
 		</div>
  
@@ -124,13 +130,13 @@
 			<article id="mercury-window" class="window">
 				<div class="reflect">
 					<h1 class="bebas">
-						Mercury
+						MERKÜR
 					</h1>
-					<p class="carto">is the first planet from the Sun and is also the smallest and densest planet of the Solar System. Mercury has yet to be entirely mapped, making it the least known planet in our system.</p>
+					<p class="carto">(Utarit), Güneş Sistemi'nin Güneş'e en yakın gezegenidir. Büyüklük açısından 8 gezegen arasından son sırayı alır. Adını Roma mitolojisinde ticaret ve yolculuk tanrısı ve tanrıların habercisi olarak bilinen Merkür'den alır. </p>
 				</div>			
 			</article>
 			<div id="mercury-missions">
-				<h2 class="bebas">Mercury Observation Progress</h2>
+				<h2 class="bebas">Merkür'ü gökyüzündeki görünümü</h2>
 				<ul>
 					<li><img src="img/mercuryobs1.png" alt=""></li>
 					<li><img src="img/mercuryobs2.png" alt=""></li>
@@ -146,27 +152,27 @@
 			<article id="venus-window" class="window">
 				<div class="reflect">
 					<h1 class="bebas">
-						Venus
+						VENÜS
 					</h1>
-					<p>is the second planet from the Sun and is often called Earth's sister due to its many similarities with the Blue Planet. However, a strong greenhouse effect gives Venus the hottest climate in the Solar System.</p>
+					<p>Güneş Sisteminde, Güneşe uzaklık bakımından ikinci sıradaki gezegen. Ayrıca Zühre, Çolpan veya Çoban Yıldızı olarak da bilinir. Bu gezegen adını Eski Roma tanrıçası Venüs (Eski Yunan Mitolojisi'nde Afrodit)'ten almıştır. Kendi ekseni etrafında, Güneş Sistemindeki diğer tüm gezegenlerin aksi istikamette döner. Güneş etrafındaki dönüşünü 224.7 Dünya gününde tamamlar.</p>
 				</div>			
 			</article>
 			<ul id="venus-atmosphere" class="bebas">
 				<li>65 KM
 					<span>-100°C</span>
-					<span>Sulfuric Acid Cloud Layers</span>
+					<span>Sülfürik Asit Bulutları</span>
 				</li>
 				<li>50 KM
 					<span>0°C</span>
-					<span>Sulfuric Acid Haze</span>
+					<span>Sülfürik Asit dumanı</span>
 				</li>
 				<li>38 KM
 					<span>25°C</span>						
-					<span>Troposphere</span>
+					<span>Troposver</span>
 				</li>
 				<li>0 KM
 					<span>467°C</span>						
-					<span>Surface Level</span>
+					<span>Yüzey</span>
 				</li>
 			</ul>
 		</section>
@@ -175,9 +181,9 @@
 			<article id="earth-window" class="window">
 				<div class="reflect">
 					<h1 class="bebas">
-						Earth
+						DÜNYA
 					</h1>
-					<p>is the third planet from the Sun, and the densest and fifth-largest of the eight planets in the Solar System. Sometimes referred to as the Blue Planet, Earth is the only known planet to harbor life.</p>
+					<p>(Yeryuvarı, eski: Küre-i Arz), Güneş Sistemi'nde Güneş'e en yakın üçüncü gezegendir. Güneş Sistemindeki en yoğun ve beşinci büyük gezegendir. Üzerinde zeki yaşam formları barındırdığından emin olunan tek gök cismidir.</p>
 				</div>			
 			</article>
 			<div id="earth-moon" class="grid moon">
@@ -187,22 +193,22 @@
 				<li class="mass">
 					<img src="img/mass.svg" alt="mass">
 					5.9736 <small>x</small> 10<span class="exposant">24</span> kg
-					<span>That's 80 times the mass of the moon</span>
+					<span>Ay'dan 80 kat ağırdır</span>
 				</li>
 				<li class="perimeter">
 					<img src="img/perimeter.svg" alt="perimeter">
 					40,075,16 km
-					<span>Equatorial circumference</span>
+					<span>Ekvator çapı</span>
 				</li>
 				<li class="revolution">
 					<img src="img/revolution.svg" alt="revolution">
-					365 days
-					<span>Complete Orbital Period</span>
+					365 gün
+					<span>Yörüngesinde tek dönüşü</span>
 				</li>
 				<li class="temperature">
 					<img src="img/temperature.svg" alt="temperature">
 					-89.2&deg;C to 57.8&deg;C
-					<span>Temperature range</span>
+					<span>Sıcaklık aralığı</span>
 				</li>
 			</ul>
 		</section>
@@ -211,15 +217,15 @@
 			<article id="mars-window" class="window">
 				<div class="reflect">
 					<h1 class="bebas">
-						Mars
+						MARS
 					</h1>
-					<p>is the fourth planet from the Sun. Named after the Roman god of war, Mars is often described as the "Red Planet" and is the site of Olympus Mons, the highest known mountain in the Solar System.</p>
+					<p>veya Merih (eski: Sakıt), Güneş Sistemi'nin Güneş'ten itibâren dördüncü gezegeni. Roma mitolojisindeki savaş tanrısı Mars'a ithâfen adlandırılmıştır. Yüzeyindeki yaygın demiroksitten dolayı kızılımsı bir görünüme sahip olduğu için Kızıl Gezegen de denir.</p>
 				</div>			
 			</article>
 			<ul id="volcanoes" class="bebas">
-				<li>Olympus Mons<span>27,000 KM</span><hr /></li>
-				<li>Mount Everest<span>8,848 KM</span><hr /></li>
-				<li>Mount Fuji<span>3,776 KM</span><hr /></li>
+				<li>Olimpos Dağı<span>27,000 KM</span><hr /></li>
+				<li>Everest Dağı<span>8,848 KM</span><hr /></li>
+				<li>Fuji Dağı<span>3,776 KM</span><hr /></li>
 			</ul>
 		</section>
 		
@@ -227,27 +233,27 @@
 			<article id="jupiter-window" class="window">
 				<div class="reflect">
 					<h1 class="bebas">
-						Jupiter
+						JÜPİTER
 					</h1>
-					<p> is the fifth planet from the Sun and is the largest planet of the Solar System. Jupiter has 63 known satellites, the biggest of which are called the four Galilean Moons : Io, Europa, Ganymede and Callisto.</p>
+					<p>  (Erendiz, Müşteri) Güneş Sistemi'nin en büyük gezegeni. Güneş'ten uzaklığa göre beşinci sırada yer alır. Adını Roma mitolojisindeki tanrıların en büyüğü olan Jüpiter'den alır. Büyük ölçüde hidrojen ve helyumdan oluşmakta ve gaz devleri sınıfına girmektedir. 4 Uydusu vardır.</p>
 				</div>			
 			</article>				
 			<ul id="jupiter-moons" class="properties bebas">
 				<li><img src="img/iopicto.png" alt="">
 					IO
-					<span>Land of Volcanoes</span>
+					<span>Volkanlarla dolu </span>
 				</li>
 				<li><img src="img/europapicto.png" alt="">
 					EUROPA
-					<span>Ice Ice Baby</span>
+					<span>Tamamen buz</span>
 				</li>
 				<li><img src="img/ganymedepicto.png" alt="">
 					GANYMEDE
-					<span>Larger than Mercury</span>	
+					<span>Merkür'den daha büyük</span>	
 				</li>
 				<li><img src="img/callistopicto.png" alt="">
 					CALLISTO
-					<span>The Habitable Moon ?</span>	
+					<span>En yaşanabilir gezegenmiş</span>	
 				</li>															
 			</ul>
 			<div id="galilean-moons" class="grid bebas"></div>
@@ -257,14 +263,14 @@
 			<article id="saturn-window" class="window">
 				<div class="reflect">
 					<h1 class="bebas">
-						Saturn
+						SATÜRN
 					</h1>
-					<p>is the sixth planet from the Sun and is the second largest planet in our system. Despite its size (9.4 Earths), Saturn's density is so low that it would float on water if there was a large enough ocean.</p>
+					<p>(eski adı ile Zühal) Güneş Sisteminin Güneş'e yakınlık sırasına göre 6. gezegenidir. Büyüklük açısından Jüpiter'den sonra ikinci sırada gelir. Adını yunan mitolojisindeki Kronos'tan alır. Çıplak gözle izlenebilen 5 gezegenden biri (diğerleri, Merkür, Venüs, Mars, ve Jüpiter) olarak eski çağlardan beri insanoğlunun dikkatini çekmiştir. Büyük ölçüde hidrojen ve helyumdan oluşmakta ve gaz devleri sınıfına girmektedir.</p>
 				</div>			
 			</article>
 			<div id="rings-origin">
-				<h2 class="bebas">The origin of Saturn's rings</h2>
-				<p class="carto">Almost entirely composed of water ice,<br />Saturn's rings are believed to<br />be the remains of a<br />former moon.</p>
+				<h2 class="bebas">Satürn'ün halkaları şöyle oluşmuştur</h2>
+				<p class="carto">Satürn halkaları çoğunluğunun<br />çapı 1 cm. ile 10 m. arasında değiştiği<br/> düşünülen büyük sayıda <br/>buz parçacıklarından oluşmuştur.</p>
 				<ul id="arrows" class="bebas">
 					<li><span>1</span>
 						<img class="saturnarrow" src="img/saturn-arrow1.png" alt="">
@@ -286,24 +292,24 @@
 			<article id="uranus-window" class="window">
 				<div class="reflect">
 					<h1 class="bebas">
-						Uranus
+						URANÜS
 					</h1>
-					<p>is the seventh planet from the Sun and is the coldest in the Solar System. Altough the first pictures taken by Voyager 2 showed a featureless, pale-blue planet, astronomers later discovered the complex atmosphere of Uranus.</p>
+					<p>Güneş Sisteminin Güneş'ten yakınlık sırasına göre 7. gezegenidir. Çap açısından Jüpiter ve Satürn'den sonra üçüncü, kütle açısından bu iki gezegen ve Neptün'ün ardından dördüncü sırada gelir. Adını Yunan mitolojisi'ndeki gökyüzü tanrısı Uranos'tan (Yunanca'da Οὐρανός, Latinceleştirilmiş şekli ile Uranus) alır. 1781 yılında William Herschel tarafından bulunmuştur. Buz devleri sınıfına girmektedir.</p>
 				</div>			
 			</article>
 			<div id="axial-tilt" class="grid">
-				<h2 class="bebas">Axial Tilt</h2>
+				<h2 class="bebas">Eksen Eğikliği</h2>
 				<img src="img/tilt.png" alt="">
 				<span class="bebas">98°</span>					
 			</div>				
 			<div id="uranus-atmosphere">
-				<h2 class="bebas">The atmosphere of uranus</h2>
+				<h2 class="bebas">Atmosferi</h2>
 				<div id="hydrogen">
 					<div></div>
 					<div></div>
 					<div></div>
 					<span class="bebas">85.3%<br />
-						Hydrogen
+						Hidrojen
 					</span>						
 				</div>
 				<div id="helium">
@@ -311,7 +317,7 @@
 					<div></div>
 					<div></div>
 					<span class="bebas">15.3%<br />
-						Helium
+						Helyum
 					</span>						
 				</div>
 				<div id="methane">
@@ -319,7 +325,7 @@
 					<div></div>
 					<div></div>
 					<span class="bebas">2.3%<br />
-						Methane
+						Metan
 					</span>
 				</div>
 				<div id="deuteride">
@@ -327,7 +333,7 @@
 					<div></div>
 					<div></div>
 					<span class="bebas">0.01%<br />
-						Hydrogen Deuteride
+						Hidrojen Dehidrat
 					</span>
 				</div>
 			</div>
@@ -337,26 +343,26 @@
 			<article id="neptune-window" class="window">
 				<div class="reflect">
 					<h1 class="bebas">
-						Neptune
+						NEPTÜN
 					</h1>
-					<p>is the eighth and farthest planet from the sun. Neptune has been approached only once by a man-made object, Voyager 2 space probe, in 1989. Most of our knowledge of Neptune comes from this first and only flyby.</p>
+					<p>, Güneş Sistemi'nin sekizinci ve Güneş'e en uzak gezegenidir. Adını Roma deniz tanrısı Neptunus'ten alan gezegen, çapına göre en büyük dördüncü, kütlesine göre ise en büyük üçüncü gezegendir. Dünya'nın 17 katı kütlesiyle ikizi sayılabilecek Uranüs'ten çok az büyük ve daha yoğundur. Güneş'e olan uzaklığı ortalama 30 Astronomik birimdir (AU).</p>
 				</div>			
 			</article>
 			<ul id="neptune-facts" class="bebas">
 				<li><img src="img/wind.png" alt="">
 					2100 <span>km/h</span>
 					<br />
-					<span class="carto">max wind speed</span>
+					<span class="carto">en yüksek rüzgar hızı</span>
 				</li>
 				<li><img src="img/satellite.png" alt="">
-					13 <span>known satellites</span>
+					13 <span>bilinen uydu</span>
 					<br />
-					<span class="carto">and counting</span>
+					<span class="carto">ve artıyor...</span>
 				</li>
 				<li><img src="img/time.png" alt="">
-					164 <span>earth years</span>
+					164 <span>Dünya yılı</span>
 					<br />
-					<span class="carto">per neptunian year</span>
+					<span class="carto">her Neptün yılı</span>
 				</li>
 			</ul>
 			<div id="flyby">
