full turkish translation

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
   Created by Little Workshop http://www.littleworkshop.fr
 
+  Turkish translate and content improvement by OkulBilişim (okulbilisim.com)
+
   * Libraries used : jQuery, Raphaël, RequireJS
-  * Go check out the source on GitHub at : http://github.com/[insert repo URL]
+  * Go check out the source on GitHub at : http://github.com/okulbilisim/gezegenlerimiz
   * Supported in Firefox 4, Chrome, Safari
 -->
 <head>
@@ -34,11 +36,11 @@
 	<img id="glow" src="img/glow.png">
 
 	<div id="title">
-		<h1 class="franchise"><span class="marketing">işte</span>Gezegenlerimiz</h1>
+		<h1 class="franchise"><span class="oregano">işte</span>GEZEGENLERİMİZ</h1>
 		<span id="subtitle" class="carto">HTML5 ile Astronomik Macera</span>
 	</div>
 	
-	<div id="instructions" class="carto loading">
+	<div id="instructions" class="oregano loading">
 		başlamak için bir gezegene tıklayın
 	</div>
 
@@ -47,7 +49,7 @@
 	</div>
 
 	<section id="credits">
-		<span id="madeby" class="carto">Made on Earth by <a href="http://www.littleworkshop.fr/" target="_blank" title="Visit Little Workshop">Little Workshop</a></span>
+		<span id="madeby" class="oregano">Orjinal <br /><a href="http://www.littleworkshop.fr/" target="_blank" title="Visit Little Workshop">Little Workshop</a> <br> Türkçe çeviri ve içerik geliştirmesi<br /><a href="http://www.okulbilisim.com/" target="_blank" title="OkulBilişim Yazılım Danışmanlık">OkulBilişim</a></span>
 		<div id="door">
 			<div></div>
 			<div></div>			
@@ -67,25 +69,12 @@
 				<span class="bebas">Franck Lecollinet</span>
 				<span class="carto"><a target="_blank" href="http://twitter.com/whatthefranck/" title="follow Franck on Twitter">@whatthefranck</a></span>
 			</p>
-			<p id="hmert">
+			<p id="hmert"><br><br>
 				<span class="marketing">tercüme</span>
 				<span class="bebas">HUSEYIN MERT</span>
 				<span class="carto"><a target="_blank" href="http://twitter.com/hmert/" title="Hüseyin'i Twitter'da takip et">@hmert</a></span>
 			</p>
 		</div>
-		<section id="typefaces">
-			<header>
-				<span class="separator"></span>
-				<span id="title-hr" class="marketing">fontlar</span>
-				<span class="separator"></span>
-			</header>
-			<ul>
-				<li class="carto">Marketing Script <br/><span>by</span> <a href="http://www.steffmann.de/" target="_blank" title="Dieter Steffmann">Dieter Steffmann</a></li>
-				<li class="carto">Franchise <br/><span>by</span> <a href="http://www.derekweathersbee.com/" target="_blank" title="Derek Weathersbee">Derek Weathersbee</a></li>
-				<li class="carto">Bebas <br/><span>by</span> <a href="http://dharmatype.com/flat-it" target="_blank" title="Flat-it Type Foundry">Flat-it</a></li>
-				<li class="carto">CartoGothic Std <br/><span>by</span> <a href="http://www.fontsite.com/" target="_blank" title="FontSite Inc.">FontSite Inc.</a></li>												
-			</ul>
-		</section>
 	</section>
 	
 	<ul id="planets" class="loading">
